Added responsive table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
 </div>
 
 
-<table class="table" *ngIf="available" >
+<table class="table table-responsive" *ngIf="available" >
     <thead>
       <tr>
         <th scope="col">City</th>
